--- a/React-vite/index.html
+++ b/React-vite/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 
-<body>
+<body id="dark_ligth">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
